--- a/VisualClojure.Deployment/VisualClojure.Deployment.csproj
+++ b/VisualClojure.Deployment/VisualClojure.Deployment.csproj
@@ -4,13 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{AC655052-D386-4014-A4C0-984F9CF2E017}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VisualClojure.Deployment</RootNamespace>
     <AssemblyName>VisualClojure.Deployment</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <MinimumVisualStudioVersion>12.0</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +24,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CreateVsixContainer>True</CreateVsixContainer>
+    <DeployExtension>True</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +34,14 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CreateVsixContainer>True</CreateVsixContainer>
+    <DeployExtension>True</DeployExtension>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Clojure">
@@ -129,7 +143,9 @@
   <ItemGroup>
     <Compile Include="ClearableMenuCommandService.cs" />
     <Compile Include="ClojureLanguage.cs" />
-    <Compile Include="ClojurePackage.cs" />
+    <Compile Include="ClojurePackage.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Configuration\GeneralPropertyPageAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvideIntellisenseProviderAttribute.cs" />
@@ -137,50 +153,136 @@
     <Compile Include="Win32Api.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ClojurePackage.xml" />
-    <Content Include="CodeSnippets\SnippetsIndex.xml" />
-    <Content Include="source.extension.vsixmanifest" />
-    <Content Include="Templates\Projects\ASPNet MVC\Clojure.ico" />
-    <Content Include="Templates\Projects\Class Library\Clojure.ico" />
-    <Content Include="Templates\Projects\Console Application\Clojure.ico" />
-    <Content Include="Templates\Projects\Windows Forms Application\Clojure.ico" />
-    <Content Include="VSIXIcon.png" />
-    <Content Include="VSIXPreview.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CodeSnippets\Snippets\cond.snippet" />
-    <None Include="CodeSnippets\Snippets\def.snippet" />
-    <None Include="CodeSnippets\Snippets\defn.snippet" />
-    <None Include="CodeSnippets\Snippets\doto.snippet" />
-    <None Include="CodeSnippets\Snippets\fn.snippet" />
-    <None Include="CodeSnippets\Snippets\genclass.snippet" />
-    <None Include="CodeSnippets\Snippets\if.snippet" />
-    <None Include="CodeSnippets\Snippets\let.snippet" />
-    <None Include="CodeSnippets\Snippets\loop.snippet" />
-    <None Include="CodeSnippets\Snippets\ns.snippet" />
-    <None Include="CodeSnippets\Snippets\try.snippet" />
-    <None Include="Runtimes\ClojureCLR-1.5.0.zip" />
-    <None Include="Runtimes\ClojureScript-1.5.0.zip" />
-    <None Include="Runtimes\Clojurescript-20March2014.zip" />
-    <None Include="Templates\CSharp\ProjectItems\ClojureScript Files\Code File.cljs" />
-    <None Include="Templates\ProjectItems\Clojure\ADONetDataReader.clj" />
-    <None Include="Templates\ProjectItems\Clojure\ASPNetMVCController.clj" />
-    <None Include="Templates\ProjectItems\Clojure\CodeFile.clj" />
-    <None Include="Templates\ProjectItems\Clojure\WindowsForm.clj" />
-    <None Include="Templates\Projects\ASPNet MVC\ASP.Net MVC Controller Library.cljproj" />
-    <None Include="Templates\Projects\ASPNet MVC\HomeController.clj" />
-    <None Include="Templates\Projects\Class Library\Class Library.cljproj" />
-    <None Include="Templates\Projects\Class Library\Class1.clj" />
-    <None Include="Templates\Projects\Console Application\Console Application.cljproj" />
-    <None Include="Templates\Projects\Console Application\program.clj" />
-    <None Include="Templates\Projects\Windows Forms Application\Form1.clj" />
-    <None Include="Templates\Projects\Windows Forms Application\program.clj" />
-    <None Include="Templates\Projects\Windows Forms Application\Windows Forms Application.cljproj" />
+    <VSCTCompile Include="ClojurePackage.xml">
+      <ResourceName>Menus.ctmenu</ResourceName>
+      <SubType>Designer</SubType>
+    </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ClojurePackage.resx">
-      <DependentUpon>ClojurePackage.cs</DependentUpon>
+      <MergeWithCTO>true</MergeWithCTO>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="CodeSnippets\SnippetsIndex.xml">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="..\LICENSE">
+      <Link>LICENSE</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <None Include="source.extension.vsixmanifest" />
+    <Content Include="Templates\Projects\ASPNet MVC\Clojure.ico">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Class Library\Clojure.ico">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Console Application\Clojure.ico">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Windows Forms Application\Clojure.ico">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="VSIXIcon.png">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="VSIXPreview.png">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\key.snk">
+      <Link>key.snk</Link>
+    </None>
+    <Content Include="..\README.md">
+      <Link>README.md</Link>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\cond.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\def.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\defn.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\doto.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\fn.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\genclass.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\if.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\let.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\loop.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\ns.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="CodeSnippets\Snippets\try.snippet">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Metadata.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Runtimes\ClojureCLR-1.5.0.zip">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Runtimes\ClojureScript-1.5.0.zip">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\CSharp\ProjectItems\ClojureScript Files\Code File.cljs">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\ProjectItems\Clojure\ADONetDataReader.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\ProjectItems\Clojure\ASPNetMVCController.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\ProjectItems\Clojure\CodeFile.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\ProjectItems\Clojure\WindowsForm.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\ASPNet MVC\ASP.Net MVC Controller Library.cljproj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\ASPNet MVC\HomeController.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Class Library\Class Library.cljproj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Class Library\Class1.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Console Application\Console Application.cljproj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Console Application\program.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Windows Forms Application\Form1.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Windows Forms Application\program.clj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
+    <Content Include="Templates\Projects\Windows Forms Application\Windows Forms Application.cljproj">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VisualClojure.Debugger\VisualClojure.Debugger.csproj">
@@ -208,7 +310,13 @@
       <Name>VisualClojure.Utilities</Name>
     </ProjectReference>
   </ItemGroup>
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\VSSDK\Microsoft.VsSDK.targets" Condition="false" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
