--- a/VisualClojure.Editor/VisualClojure.Editor.csproj
+++ b/VisualClojure.Editor/VisualClojure.Editor.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\key.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Clojure">
       <HintPath>..\Dependencies\Clojure.dll</HintPath>
@@ -154,6 +160,11 @@
       <Project>{5e15de7d-60c5-4490-b04e-4a9c4db6931f}</Project>
       <Name>VisualClojure.Utilities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\key.snk">
+      <Link>key.snk</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
