--- a/VisualClojure.Deployment/VisualClojure.Deployment.csproj
+++ b/VisualClojure.Deployment/VisualClojure.Deployment.csproj
@@ -73,9 +73,11 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Compile Include="Configuration\GeneralPropertyPageAdapter.cs" />
+    <Compile Include="MenuCommandListHider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvideIntellisenseProviderAttribute.cs" />
     <Compile Include="RegisterSnippetsAttribute.cs" />
+    <Compile Include="ReplUtilities.cs" />
     <Compile Include="Win32Api.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -132,7 +134,6 @@
     <Content Include="Metadata.clj">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
-    <None Include="Runtimes\ClojureCLR-1.6.0.zip" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -349,6 +350,7 @@
   <ItemGroup>
     <EmbeddedResource Include="ClojurePackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
