--- a/VisualClojure.Editor/VisualClojure.Editor.csproj
+++ b/VisualClojure.Editor/VisualClojure.Editor.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Options\EditorOptions.cs" />
     <Compile Include="Options\EditorOptionsBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Tagger\ClojureTagProvider.cs" />
     <Compile Include="Tagger\ClojureTokenTag.cs" />
     <Compile Include="Tagger\ClojureTokenTagger.cs" />
